...
  String get subCategoryPromotion => 'Promotion';

  @override
  String get subCategoryPersonalMarket => 'Personal Market';

  @override
  String get subCategoryRealEstate => 'Realty';

  @override
  String get subCategoryHouseRental => 'House Rental';

  @override
  String get subCategoryCarRental => 'Rent-car';

  @override
  String get subCategoryUsedCar => 'Used Car';

  @override
  String get subCategoryManila => 'Manila';
...
